Add google authentication for application - Login with google - Update schema - Save in DB user data
